--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,3 +1,19 @@
+<!--
+  ~ Copyright (c) Joaquim Ley 2016. All Rights Reserved.
+  ~ <p/>
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~ <p/>
+  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~ <p/>
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
@@ -21,10 +37,10 @@
     </style>
 
     <style name="ItemTitleName" parent="TextAppearance.AppCompat.Headline">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:shadowColor">@color/colorPrimaryDark</item>
-        <item name="android:shadowRadius">3.0</item>
-    </style>
+    <item name="android:textColor">@android:color/white</item>
+    <item name="android:shadowColor">@color/colorPrimaryDark</item>
+    <item name="android:shadowRadius">3.0</item>
+</style>
 
     <style name="ItemDetailTitle" parent="@style/TextAppearance.AppCompat.Small">
         <item name="android:textColor">@color/red</item>
